Fixes table alignment

--- a/src/symmetric/sections/06-test-vectors.adoc
+++ b/src/symmetric/sections/06-test-vectors.adoc
@@ -38,7 +38,7 @@ Some properties *MUST* appear in the prompt file from the server for every testG
 
 The other properties *MAY* appear depending on the algorithm selected for the test vector set. The following grid defines the *REQUIRED* properties for each standard block cipher, as well as the valid values a server *MAY* use:
 
-[cols="<,<,<"]
+[cols="<,<,<,<"]
 [[property_grid_prompt]]
 .Prompt Test Group Block Cipher Applicability Grid
 
@@ -68,7 +68,7 @@ The other properties *MAY* appear depending on the algorithm selected for the te
 
 The following grid defines when each property is *REQUIRED* from a server for each authenticated block cipher:
 
-[cols="<,<,<,<,<,<,<,<,<,<"]
+[cols="<,<,<,<,<,<,<,<,<,<,<"]
 [[property_grid_prompt_auth]]
 .Prompt Test Group Authenticated Block Cipher Applicability Grid
 
@@ -85,7 +85,7 @@ NOTE: The particular values of a domain are *REQUIRED* to be an integer element 
 
 The following grid defines when each property is *REQUIRED* from a server for a key-wrap block cipher:
 
-[cols="<,<,<,<"]
+[cols="<,<,<,<,<"]
 [[property_grid_prompt_kw]]
 .Prompt Test Group Key-Wrap Block Cipher Applicability Grid
 
@@ -101,7 +101,7 @@ NOTE: The particular values of a domain are *REQUIRED* to be an integer element 
 
 The following grid defines when each property is *REQUIRED* from a server for the miscellaneous block ciphers:
 
-[cols="<,<,<,<,<,<,<"]
+[cols="<,<,<,<,<,<,<,<"]
 [[property_grid_prompt_misc]]
 .Prompt Test Group Miscellaneous Block Cipher Applicability Grid
 
