--- a/src/mac/sections/05-cmac-tdes-capabilities.adoc
+++ b/src/mac/sections/05-cmac-tdes-capabilities.adoc
@@ -15,7 +15,7 @@ Each CMAC-TDES algorithm capability advertised is a self-contained JSON object u
 | JSON Value | Description | JSON type | Valid Values
 
 | direction | The MAC direction(s) to test | array | "gen", "ver"
-| keyingOption | The Keying Option used in TDES. Keying option 1 (1) is 3 distinct keys (K1, K2, K3). Keying Option 2 (2) is 2 distinct only suitable for decrypt (K1, K2, K1). Keying option 3 (No longer valid for testing, save TDES KATs) is a single key, now deprecated (K1, K1, K1). | integer | 1, 2
+| keyingOption | The Keying Option used in TDES. Keying option 1 (1) is 3 distinct keys (K1, K2, K3). Keying Option 2 (2) is 2 distinct only suitable for decrypt (K1, K2, K1). Keying option 3 (No longer valid for testing, save TDES KATs) is a single key, now deprecated (K1, K1, K1). | array | 1, 2
 | msgLen | The CMAC message lengths supported in bits, values *MUST* be mod 8 | Domain | Min: 0, Max: 524288, Inc: 8
 | macLen | The supported mac sizes | Domain | Min: 32, Max: 64
 |===
@@ -45,44 +45,8 @@ The following is an example JSON object advertising support for CMAC-TDES.
   "revision": "1.0",
   "capabilities": [
     {
-      "direction": "gen",
-      "keyingOption": 1,
-      "msgLen": [
-        {
-          "min": 0,
-          "max": 65536,
-          "increment": 8
-        }
-      ],
-      "macLen": [
-        {
-          "min": 32,
-          "max": 64,
-          "increment": 8
-        }
-      ]
-    },
-    {
-      "direction": "ver",
-      "keyingOption": 1,
-      "msgLen": [
-        {
-          "min": 0,
-          "max": 65536,
-          "increment": 8
-        }
-      ],
-      "macLen": [
-        {
-          "min": 32,
-          "max": 64,
-          "increment": 8
-        }
-      ]
-    },
-    {
-      "direction": "ver",
-      "keyLen": 0,
+      "direction": ["gen", "ver"],
+      "keyingOption": [1],
       "msgLen": [
         {
           "min": 0,
