Corrects misaligned table within sym spec, updates readme/index to use MAC spec for GMAC algorithm * Closes https://github.com/usnistgov/ACVP/issues/1121

--- a/src/symmetric/sections/05-capabilities.adoc
+++ b/src/symmetric/sections/05-capabilities.adoc
@@ -158,6 +158,6 @@ The following grid outlines which properties are REQUIRED within the capabilitie
 
 | alphabet | An alphabet the IUT supports for Format Preserving Encryption.  Example "0123456789abcdefghijklmnopqrstuvwxyz". Alphabets should be a minimum of two characters, and a maximum of 64 (all numbers and upper and lower case letters, additionally "+" and "/"). | string | Alphanumeric non repeating characters. |
 | radix | The number base for this capability, should match the number of characters from the alphabet. | integer | 2-62 |
-| minLen | The minimum payload length the IUT can support for this alphabet. | 2 - maxLen |
-| maxLen | The maximum payload length the IUT can support for this alphabet. | minLen - variable calculation based on radix and algorithm, see <<SP800-38Gr1>>. |
+| minLen | The minimum payload length the IUT can support for this alphabet. | integer | 2 - maxLen |
+| maxLen | The maximum payload length the IUT can support for this alphabet. | integer | minLen - variable calculation based on radix and algorithm, see <<SP800-38Gr1>>. |
 |===
