RSA SigGen - remove SHA-1 as valid hash algorithm for capability registration * closes https://github.com/usnistgov/ACVP-Server/issues/85

--- a/src/rsa/sections/05-siggen-capabilities.adoc
+++ b/src/rsa/sections/05-siggen-capabilities.adoc
@@ -21,7 +21,7 @@ The following RSA / sigGen / 1.0 capabilities *MAY* be advertised by the ACVP co
 | properties | RSA signature generation parameters  - see <<FIPS186-4>>, Section 5 | array | modulo, hashAlg, and saltLen (when sigType is "pss")
 | modulo | supported RSA modulo for signature generation - see <<FIPS186-4>>, Section 5 | integer | any one of the supported modulo sizes {2048, 3072, 4096}
 | hashPair | supported hash algorithms and optional salt length for signature generation for this sigType and modulo - see <<SP800-131A>>, Section 9 | array | an array of objects containing a hashAlg and an optional saltLen
-| hashAlg | supported hash algorithms for this sigType and modulo - see <<SP800-131A>>, Section 9 | array | any non-empty subset of {"SHA-1", "SHA2-224", "SHA2-256", "SHA2-384", "SHA2-512"}
+| hashAlg | supported hash algorithms for this sigType and modulo - see <<SP800-131A>>, Section 9 | array | any non-empty subset of {"SHA2-224", "SHA2-256", "SHA2-384", "SHA2-512"}
 | saltLen | supported salt lengths for PSS signature generation - see <<FIPS186-4>>, Section 5.5 | integer | See the note below
 |===
 
@@ -125,7 +125,7 @@ The following RSA / sigGen / FIPS186-5 capabilities *MAY* be advertised by the A
 | modulo | supported RSA modulo for signature generation - see <<FIPS186-5>>, Section 5 | integer | any one of the supported modulo sizes {2048, 3072, 4096}
 | maskFunction | the mask function used, only valid for PSS | array | any non-empty subset of {"mgf1", "shake-128", "shake-256"}
 | hashPair | supported hash algorithms and optional salt length for signature generation for this sigType and modulo - see <<SP800-131A>>, Section 9 | array | an array of objects containing a hashAlg and an optional saltLen
-| hashAlg | supported hash algorithms for this sigType and modulo - see <<SP800-131A>>, Section 9 | array | any non-empty subset of {"SHA-1", "SHA2-224", "SHA2-256", "SHA2-384", "SHA2-512"}
+| hashAlg | supported hash algorithms for this sigType and modulo - see <<SP800-131A>>, Section 9 | array | any non-empty subset of {"SHA2-224", "SHA2-256", "SHA2-384", "SHA2-512"}
 | saltLen | supported salt lengths for PSS signature generation - see <<FIPS186-5>>, Section 5.5 | integer | See the note below
 |===
 
