--- a/src/sha3/sections/05-capabilities.adoc
+++ b/src/sha3/sections/05-capabilities.adoc
@@ -26,7 +26,7 @@ The following grid outlines which properties are *REQUIRED*, as well as all the 
 
 [[property_grid]]
 
-[cols="<,<,<,<,<"]
+[cols="<,<,<,<,<,<"]
 .SHA3 and SHAKE Capabilities Applicability Grid
 |===
 | algorithm| inBit| inEmpty| outputLen| outBit| performLargeDataTest
