--- a/src/snmp/sections/05-capabilities.adoc
+++ b/src/snmp/sections/05-capabilities.adoc
@@ -27,7 +27,7 @@ An example registration within an algorithm capability exchange looks like this
 {
     "algorithm": "kdf-components",
     "mode": "snmp",
-    "revision" "1.0",
+    "revision": "1.0",
     "engineId": [
         "12345678912345678900",
         "abcdef0123456789abcdef1234567890"
