--- a/src/ans9.63/sections/05-capabilities.adoc
+++ b/src/ans9.63/sections/05-capabilities.adoc
@@ -58,7 +58,7 @@ An example registration within an algorithm capability exchange looks like this
 
 The following hash functions *MAY* be advertised by an ACVP compliant client under the 'hashAlg' property
 
-* SHA-224
-* SHA-256
-* SHA-384
-* SHA-512
+* SHA2-224
+* SHA2-256
+* SHA2-384
+* SHA2-512
