Adds algorithm specification for KAS-ECC CDH-Component Sp800-56Ar3

--- a/src/draft-hammett-acvp-kas-ecc-sp800-56ar3.adoc
+++ b/src/draft-hammett-acvp-kas-ecc-sp800-56ar3.adoc
@@ -51,6 +51,8 @@ include::kas/sp800-56ar3/ecc/sections/06-test-vectors.adoc[]
 
 include::kas/sp800-56ar3/ecc/sections/07-responses.adoc[]
 
+include::kas/sp800-56ar3/ecc/sections/08-ecc-cdh-comp.adoc[]
+
 include::common/common-sections/10-security.adoc[]
 
 include::common/common-sections/11-iana.adoc[]
