--- a/src/kas/sp800-56ar3/ecc/sections/08-ecc-cdh-comp.adoc
+++ b/src/kas/sp800-56ar3/ecc/sections/08-ecc-cdh-comp.adoc
@@ -1,7 +1,7 @@
 [[eccComp]]
 == ECC CDH Component Test
 
-The ECC CDH Component Test
+The ECC CDH Component Test for SP800-56Ar3
 
 [[eccCompCap]]
 === ECC CDH Component Capabilities JSON Values
@@ -15,7 +15,7 @@ Each algorithm capability advertised is a self-contained JSON object using the f
 |JSON Value|Description|JSON type|Valid Values|Optional
 |algorithm|The algorithm under test|value|KAS-ECC|No
 |mode|The algorithm mode|value|CDH-Component|No
-|revision|The algorithm testing revision to use.|value|"1.0"|No
+|revision|The algorithm testing revision to use.|value|"Sp800-56Ar3"|No
 |prereqVals|Prerequisite algorithm validations|array of prereqAlgVal objects|See <<prereq_algs>>|No
 |curve|Array of supported curves|array|See <<supported_curves>>|No
 |===
@@ -30,7 +30,7 @@ The following is a example JSON object advertising support for KAS ECC CDH-Compo
 {
 	"algorithm": "KAS-ECC",
 	"mode": "CDH-Component",
-	"revision": "1.0",
+	"revision": "Sp800-56Ar3",
 	"prereqVals": [{
 		"algorithm": "ECDSA",
 		"valValue": "123456"
@@ -51,7 +51,7 @@ The following is a example JSON object advertising support for KAS ECC CDH-Compo
 
 | algorithm| The algorithm under test| value| KAS-ECC| No
 | mode| The algorithm mode under test| value| CDH-Component| No
-| revision| The algorithm testing revision to use.| value| "1.0"| No
+| revision| The algorithm testing revision to use.| value| "Sp800-56Ar3"| No
 | testGroups| Array of individual test group JSON objects, which are defined in <<eccCompTestGroup>>| Array| Array of test group information| No
 |===
 
@@ -99,7 +99,7 @@ The following is a example JSON object for KAS ECC CDH-Component test vectors se
 		"vsId": 1750,
 		"algorithm": "KAS-ECC",
 		"mode": "CDH-Component",
-		"revision": "1.0",
+		"revision": "Sp800-56Ar3",
 		"testGroups": [{
 				"tgId": 1,
 				"testType": "AFT",
