--- a/src/xof/sections/05-capabilities.adoc
+++ b/src/xof/sections/05-capabilities.adoc
@@ -20,7 +20,7 @@ Each algorithm capability advertised is a self-contained JSON object.  The follo
 | revision | The algorithm testing revision to use. | string
 | xof | Implementation has the ability to act as an XOF or a non-XOF algorithm | array of boolean
 | hexCustomization | Implementation supports only hexadecimal customization strings (versus ASCII strings) | boolean
-| inputLen | Input length for the XOF | domain
+| msgLen | Input length for the XOF | domain
 | outputLen | Output length for the XOF | domain
 | keyLen | Supported key lengths | domain
 | macLen | Supported MAC lengths | domain
@@ -32,7 +32,7 @@ The following grid outlines which properties are *REQUIRED*, as well as all the 
 [[property_grid]]
 .XOF Capabilities Applicability Grid
 |===
-| algorithm | xof | hexCustomization | inputLen | outputLen | keyLen | macLen
+| algorithm | xof | hexCustomization | msgLen | outputLen | keyLen | macLen
 
 | cSHAKE-128 | | | {Min: 0, Max: 65536} | {Min: 16, Max: 65536} | |
 | cSHAKE-256 | | | {Min: 0, Max: 65536} | {Min: 16, Max: 65536} | |
