Resolves PR review change requests from https://github.com/usnistgov/ACVP/pull/1147#pullrequestreview-637908901

--- a/src/kas/sp800-56ar3/ecc/sections/08-ecc-cdh-comp.adoc
+++ b/src/kas/sp800-56ar3/ecc/sections/08-ecc-cdh-comp.adoc
@@ -17,7 +17,8 @@ Each algorithm capability advertised is a self-contained JSON object using the f
 |mode|The algorithm mode|value|CDH-Component|No
 |revision|The algorithm testing revision to use.|value|"Sp800-56Ar3"|No
 |prereqVals|Prerequisite algorithm validations|array of prereqAlgVal objects|See <<prereq_algs>>|No
-|curve|Array of supported curves|array|See <<supported_curves>>|No
+|function| Type of function supported| array| See <<supported_functions>>| Yes
+|curve|Array of supported curves|array|P-224, P-256, P-384, P-521, K-233, K-283, K-409, K-571, B-233, B-283, B-409, B-571|No
 |===
 
 [[app-eccComponent-reg-ex]]
@@ -35,8 +36,8 @@ The following is a example JSON object advertising support for KAS ECC CDH-Compo
 		"algorithm": "ECDSA",
 		"valValue": "123456"
 	}],
-	"function": ["keyPairGen", "dpGen"],
-	"curve": ["p-224", "k-233", "b-233"]
+	"function": ["keyPairGen"],
+	"curve": ["P-224", "K-233", "B-233"]
 }
 ----
 
@@ -103,7 +104,7 @@ The following is a example JSON object for KAS ECC CDH-Component test vectors se
 		"testGroups": [{
 				"tgId": 1,
 				"testType": "AFT",
-				"curve": "p-192",
+				"curve": "P-192",
 				"tests": [{
 					"tcId": 1,
 					"publicServerX": "CAEF2CBA796BB7FC143D3EAED698C26AAE6F6F79DF3974EE",
@@ -113,7 +114,7 @@ The following is a example JSON object for KAS ECC CDH-Component test vectors se
 			{
 				"tgId": 2,
 				"testType": "AFT",
-				"curve": "k-163",
+				"curve": "K-163",
 				"tests": [{
 					"tcId": 26,
 					"publicServerX": "048C46D674E1218D0BD3C9FCD120ECE8B4DB7310E7",
@@ -123,7 +124,7 @@ The following is a example JSON object for KAS ECC CDH-Component test vectors se
 			{
 				"tgId": 3,
 				"testType": "AFT",
-				"curve": "b-163",
+				"curve": "B-163",
 				"tests": [{
 					"tcId": 51,
 					"publicServerX": "8EE7C8F08BF47B21CA2FE911B721651B90E52391",
