--- a/src/kas/sp800-56ar2/ecc/sections/05-capabilities.adoc
+++ b/src/kas/sp800-56ar2/ecc/sections/05-capabilities.adoc
@@ -60,7 +60,9 @@ The following function types *MAY* be advertised by the ACVP compliant crypto mo
 * dpVal - IUT can perform domain parameter validation (FFC only)
 * keyPairGen - IUT can perform keypair generation.
 * fullVal - IUT can perform full public key validation ( <<SP800-56Ar2>> section 5.6.2.3.1 / 5.6.2.3.3) 
+  * ACVP server *MAY* inject keys into "VAL" type tests that will fail full public key validation.
 * partialVal - IUT can perform partial public key validation ( <<SP800-56Ar2>> section 5.6.2.3.2 / 5.6.2.3.4) 
+  * ACVP server *MAY* inject keys into "VAL" type tests that will fail partial public key validation.
 * keyRegen - IUT can regenerate keys given a specific seed and domain parameter (pqg for FFC, curve for ECC)
 
 [[schemes]]
