ANS x9.42 KDF - Specification updates for OID when utilizing a DER kdfType * closes https://github.com/usnistgov/ACVP/issues/1127

--- a/src/ans9.42/sections/05-capabilities.adoc
+++ b/src/ans9.42/sections/05-capabilities.adoc
@@ -20,6 +20,7 @@ A registration *SHALL* use these properties
 | otherInfoLen | Length in bits of other info for "concatentation" kdfTYpe | domain | Min:0, Max:4096, Increment: 8
 | suppInfoLen | Length in bits of supplemental public and private info for "DER" kdfType | domain | Min:0, Max:4096, Increment: 8
 | zzLen | The length of ZZ in bits | domain | Min: 1, Max: 4096
+| oid | The OID labels to use, required for "DER" kdfType | array | See <<valid-oid>>
 | hashAlg | The supported hash algorithms | array | See <<valid-sha>>
 |===
 
@@ -72,6 +73,20 @@ An example registration within an algorithm capability exchange looks like this
 	]
 }
 ----
+
+[#valid-oid]
+==== Valid OIDs
+
+The following OIDs *MAY* be advertised by an ACVP compliant client under the 'oid' property
+
+* TDES
+  * Represents a bit string of "060B2A864886F70D0109100306"
+* AES-128-KW
+  * Represents a bit string of "0609608648016503040105"
+* AES-192-KW
+  * Represents a bit string of "0609608648016503040119"
+* AES-256-KW
+  * Represents a bit string of "060960864801650304012D"
 
 [#valid-sha]
 ==== Valid Hash Functions
