fix section 7.3 introductory text to grids, radix property max value
-Updated section 7.3 so that the text preceding each Applicability Grid related to that grid.
-Updated the radix max value to 64 to close #1111

--- a/src/symmetric/sections/05-capabilities.adoc
+++ b/src/symmetric/sections/05-capabilities.adoc
@@ -88,9 +88,9 @@ The following grid outlines which properties are *REQUIRED*, as well as all the 
 | TDES-OFBI| "1.0"| ["encrypt", "decrypt"]| | [1, 2] Note: 2 is only available for decrypt operations
 |===
 
-NOTE: keyingOption 2 *SHALL* only available for decrypt operations.
+NOTE: keyingOption 2 *SHALL* only be available for decrypt operations.
 
-The following grid outlines which properties are *REQUIRED*, as well as the possible values a server *MAY* support for each authenticated block cipher algorithm:
+The following grid outlines which properties are *REQUIRED*, as well as the possible values a server *MAY* support for each key-wrap block cipher algorithm:
 
 [[property_grid_auth]]
 .Key-Wrap Block Cipher Algorithm Capabilities Applicability Grid
@@ -103,7 +103,7 @@ The following grid outlines which properties are *REQUIRED*, as well as the poss
 | TDES-KW | "1.0" | ["encrypt", "decrypt"] | | ["cipher", "inverse"] | [1, 2] Note: 2 is only available for decrypt operations | {"Min": 64, "Max": 4096, "Increment": 32} 
 |===
 
-The following grid outlines which properties are *REQUIRED*, as well as the possible values a server *MAY* support for each key-wrap block cipher algorithm:
+The following grid outlines which properties are *REQUIRED*, as well as the possible values a server *MAY* support for each authenticated block cipher algorithm:
 
 [cols="<,<,<,<,<,<,<,<,<,<,<"]
 [[property_grid_kw]]
@@ -118,7 +118,7 @@ The following grid outlines which properties are *REQUIRED*, as well as the poss
 | AES-CCM| "1.0"| ["encrypt", "decrypt"]| [128, 192, 256]| {"Min": 0, "Max": 256, "Inc": 8}| {"Min": 56, "Max": 104, "Inc": 8}| | | | {"Min": 0, "Max": 524288, "Inc": any}| {[32, 64, 96, 104, 112, 120, 128]}
 |===
 
-The following grid outlines which properties are *REQUIRED*, as well as the possible values a server *MAY* support for each miscellaneous block cipher algorithm:
+The following grid outlines which properties are *REQUIRED*, as well as the possible values a server *MAY* support for the XTS block cipher algorithm:
 
 .XTS Block Cipher Algorithm Capabilities Applicability Grid
 
@@ -129,6 +129,8 @@ The following grid outlines which properties are *REQUIRED*, as well as the poss
 |===
 
 NOTE: The difference in testing between ACVP-AES-XTS / "1.0" and ACVP-AES-XTS / "2.0" is the inclusion of the data unit in the "2.0" revision. The <<AES-XTS>> standard provides the concept of a data unit as a means of logically breaking apart a data stream provided to the encryption algorithm. A data unit may be larger, smaller or equal to the payload being processed. In the case of the "1.0" revision, the data unit length always matches the payload length. Thus, the "1.0" revision can be accessed via the "2.0" revision by setting the 'dataUnitLenMatchesPayload' field to false. Within the prompt, in "1.0", the test group contains the payload length for the entire group. In "2.0" this is moved to the test case level and handled on a per case basis along with the data unit length. Both values may be provided even when 'dataUnitLenMatchesPayload' is false.
+
+The following grid outlines which properties are *REQUIRED*, as well as the possible values a server *MAY* support for each miscellaneous block cipher algorithm:
 
 [[property_grid_misc]]
 .Miscellaneous Block Cipher Algorithm Capabilities Applicability Grid
@@ -146,18 +148,18 @@ of capabilities is required. See <<property_grid_ff_capabilities>>
 | AES-FF3-1| "1.0"| ["encrypt", "decrypt"]| [128, 192, 256]| {"Min": 128, "Max": 65536, "Inc": any}| | | | | | At least one set of capabilities is required. See <<property_grid_ff_capabilities>> 
 |===
 
-NOTE: keyingOption 2 *SHALL* only available for decrypt operations.
+NOTE: keyingOption 2 *SHALL* only be available for decrypt operations.
 
 [[property_grid_ff_capabilities]]
 .Format Preserving Encryption Capabilities Object
 
-The following grid outlines which properties are REQUIRED within the capabilities object array in use for ACVP-AES-FF1 and ACVP-AES-FF3-1.
+The following grid outlines which properties are *REQUIRED* within the capabilities object array in use for ACVP-AES-FF1 and ACVP-AES-FF3-1.
 
 |===
 | Property Name | Description | Type | Valid Values |
 
 | alphabet | An alphabet the IUT supports for Format Preserving Encryption.  Example "0123456789abcdefghijklmnopqrstuvwxyz". Alphabets should be a minimum of two characters, and a maximum of 64 (all numbers and upper and lower case letters, additionally "+" and "/"). | string | Alphanumeric non repeating characters. |
-| radix | The number base for this capability, should match the number of characters from the alphabet. | integer | 2-62 |
+| radix | The number base for this capability, should match the number of characters from the alphabet. | integer | 2-64 |
 | minLen | The minimum payload length the IUT can support for this alphabet. | integer | 2 - maxLen |
 | maxLen | The maximum payload length the IUT can support for this alphabet. | integer | minLen - variable calculation based on radix and algorithm, see <<SP800-38Gr1>>. |
 |===
