ansix9.42 Updates inputs to be mod 8 * https://github.com/usnistgov/ACVP-Server/issues/98

--- a/src/ans9.42/sections/05-capabilities.adoc
+++ b/src/ans9.42/sections/05-capabilities.adoc
@@ -16,10 +16,10 @@ A registration *SHALL* use these properties
 | revision | ACVP Test version | string | "1.0"
 | prereqVals | Prereqs of the algo | object | See Prerequisites
 | kdfType | The type of KDF | array | "DER" and/or "concatenation"
-| keyLen | Length of output key - bits | domain | Min:1, Max:4096
+| keyLen | Length of output key - bits | domain | Min:1, Max:4096, Increment: 8
 | otherInfoLen | Length in bits of other info for "concatentation" kdfTYpe | domain | Min:0, Max:4096, Increment: 8
 | suppInfoLen | Length in bits of supplemental public and private info for "DER" kdfType | domain | Min:0, Max:4096, Increment: 8
-| zzLen | The length of ZZ in bits | domain | Min: 1, Max: 4096
+| zzLen | The length of ZZ in bits | domain | Min: 1, Max: 4096, Increment: 8
 | oid | The OID labels to use, required for "DER" kdfType | array | See <<valid-oid>>
 | hashAlg | The supported hash algorithms | array | See <<valid-sha>>
 |===
