SP 800-108 KDF spec updates for ACVP-1109 and misc. typos/formatting changes
-added content to the Test Types and Test Coverage section
-reorganized some sections
-added SP 800-108 reference
-added a note that a 'counterLength' of 0 requires a 'fixedDataOrder' of "none" and vice versus
-fixed some typos

--- a/src/draft-celi-acvp-kbkdf.adoc
+++ b/src/draft-celi-acvp-kbkdf.adoc
@@ -24,8 +24,8 @@
 :keyword: acvp, crypto
 
 // Singular name of the algorithm
-:spec-algorithm: SP800-108 KDF
-:algo-short-name: KDF 108
+:spec-algorithm: SP 800-108 KDF
+:algo-short-name: SP 800-108 KDF
 
 include::common/common-sections/00-abstract.adoc[]
 
