--- a/src/kdf/sections/07-responses.adoc
+++ b/src/kdf/sections/07-responses.adoc
@@ -1,10 +1,10 @@
 
 [#responses]
-== Responses
+== Test Vector Responses
 
 After the ACVP client downloads and processes a vector set, it must send the response vectors back to the ACVP server. The following table describes the JSON object that represents a vector set response.
 
-.Vector Set Response JSON Object
+.Vector Set Response Properties
 |===
 | JSON Property | Description | JSON Type
 
@@ -26,7 +26,7 @@ An example of this is the following
 
 The testGroups section is used to organize the ACVP client response in a similar manner to how it receives vectors. Several algorithms *SHALL* require the client to send back group level properties in their response. This structure helps accommodate that.
 
-.Vector Set Group Response JSON Object
+.Vector Set Group Response Properties
 |===
 | JSON Property | Description | JSON Type
 
@@ -44,9 +44,11 @@ An example of this is the following
 }
 ----
 
-The following table describes the JSON object that represents a test case response for a {spec-algorithm}.
+The testCase section is used to organize the ACVP client response in a similar manner to how it receives vectors. Several algorithms *SHALL* require the client to send back group level properties in their response. This structure helps accommodate that.
 
-.Test Case Results JSON Object
+The following table describes the JSON properties that represent a test case response for a {spec-algorithm}.
+
+.Test Case Results JSON Properties
 |===
 | JSON Property | Description | JSON Type
 
@@ -55,3 +57,29 @@ The following table describes the JSON object that represents a test case respon
 | fixedData | The fixed data used | hex
 | keyOut | The outputted key | hex
 |===
+
+=== Example Test Vector Response JSON
+
+The following is an abbreviated example of a JSON object for SP800-108 KDF test results sent from the crypto module to the ACVP server.
+
+// [align=left,alt=,type=]
+....
+                        
+[{
+                "acvVersion": <acvp-version>
+        },
+        {
+                "vsId": 1564,
+                "testGroups": [{
+                        "tgId": 1,
+                        "tests": [{
+                                "tcId": 1,
+                                "keyOut": "94D58F22FA9092B0375F7EE6841B6775226703E3232BF9CF496E4EF3CDE1037765DDC060C08C9B3A845E288EED171535EBA97D23DCF8F6D2D4CF9D980CB4F6D270D3A7859B1FE2BFCA81F0702B5767E35BE9B96BA65C5263EB0DECD5FA721FFA57CE208F53F910DB6087E93BEE1A24E790E1DF02C140E89E04DF5299A63B71DA",
+                                "fixedData": "FBF14DF02EE6C7DABCA6EF9AF59BB9A2"
+                        }]
+                }]
+        }
+]
+            
+                    
+....
