--- a/src/kdf/sections/06-test-vectors.adoc
+++ b/src/kdf/sections/06-test-vectors.adoc
@@ -1,10 +1,8 @@
 
 [[tgjs]]
-=== Test Groups
+=== Test Groups JSON Schema
 
-The testGroups element at the top level in the test vector JSON object is an array of test	groups. Test vectors are grouped into similar test cases to reduce the amount of data transmitted in the vector set. For instance, all test vectors that use the same key size would be grouped	together. The Test Group JSON object contains meta data that applies to all test vectors within	the group. The following table describes the the secure hash JSON elements of the Test Group JSON object.
-
-The prompt test group for KDF is as follows:
+The testGroups element at the top level in the test vector JSON object is an array of test	groups. Test vectors are grouped into similar test cases to reduce the amount of data transmitted in the vector set. For instance, all test vectors that use the same key size would be grouped	together. The Test Group JSON object contains meta data that applies to all test vectors within	the group. The following table describes the {spec-algorithm} JSON elements of the Test Group JSON object.
 
 .Test Group JSON Object
 |===
@@ -25,7 +23,7 @@ NOTE: The feedback mode KDF counter location of "counter after iterator" is refe
 
 The 'tgId', 'testType' and 'tests' objects *MUST* appear in every test group element communicated from the server to the client as a part of a prompt. Other properties are dependent on which 'testType' the group is addressing.
 
-=== Test Cases
+=== Test Case JSON Schema
 
 Each test group contains an array of one or more test cases. Each test case is a JSON object that represents a single test vector to be processed by the ACVP client. The following table describes the JSON elements for each {spec-algorithm} test vector.
 
@@ -42,3 +40,42 @@ Each test group contains an array of one or more test cases. Each test case is a
 NOTE: If the "middle fixed data" option is used for the 'counterLocation', then the test case is deferred from the server. In this case, the client *MUST* provide a 'breakLocation' integer value which is the length of the fixed data before the counter is inserted.
 
 NOTE: If the 'deferred' property is not present, it *MAY* be assumed to be 'false'.
+
+=== Example Test Vector JSON Object
+
+The following is a example JSON object for SP 800-108 KDF test vectors sent from the ACVP server to the crypto module.
+
+// [align=left,alt=,type=]
+....
+                        
+[{
+                "acvVersion": "0..54"
+        },
+        {
+                "vsId": 1564,
+                "algorithm": "counterMode",
+                "revision": "1.0",
+                "testGroups": [{
+                        "tgId": 1,
+                        "kdfMode": "counter",
+                        "macMode": "CMAC-AES128",
+                        "counterLocation": "after fixed data",
+                        "keyOutLength": 1024,
+                        "counterLength": 8,
+                        "tests": [{
+                                        "tcId": 1,
+                                        "keyIn": "5DA38931E8D9174BC3279C8942D2DB82",
+                                        "deferred": false
+                                },
+                                {
+                                        "tcId": 2,
+                                        "keyIn": "58F5426A40E3D5D2C94F0F97EB30C739",
+                                        "deferred": false
+                                }
+                        ]
+                }]
+        }
+]
+            
+                    
+....
