SP 800-108 updates for ACVP-1178
-updated some of the wording in the spec to more closely align with the language used in SP 800-108
-added sections 6.1.1 and 6.1.2 to describe what is tested by the ACVP server
-clarified that the sample response provided is not a real response, e.g., look to the SP 800-108 spec for rules for defining the input fixed info

--- a/src/kdf/sections/05-capabilities.adoc
+++ b/src/kdf/sections/05-capabilities.adoc
@@ -34,7 +34,7 @@ A registration *SHALL* use these properties:
 [[kdfmodes]]
 ==== Supported SP 800-108 KDF Modes
 
-The following SP800-108 KDF modes may be advertised by the ACVP compliant crypto module:
+The following SP800-108 KDF modes or "modes of iteration" may be advertised by the ACVP compliant crypto module:
 
 * counter
 * feedback
@@ -53,9 +53,9 @@ The complete list of KDF key generation capabilities may be advertised by the AC
 |===
 | JSON Value | Description | JSON Type | Valid Values
 
-| kdfMode | The type of SP800-108 KDF | string | See <<kdfmodes>>
-| macMode | The MAC algorithm used | string | See <<valid-mac>>
-| supportedLengths | The key lengths supported in bits | domain | Min: 1, Max: 4096
+| kdfMode | The type of SP800-108 KDF or "mode of iteration" | string | See <<kdfmodes>>
+| macMode | The MAC or PRF algorithm used | string | See <<valid-mac>>
+| supportedLengths | The supported derived keying material lengths in bits | domain | Min: 1, Max: 4096
 | fixedDataOrder | Describes where the counter appears in the fixed data | array | Any non-empty subset of {"none", "after fixed data", "before fixed  data", "middle fixed data", "before iterator"}
 | counterLength | The length of the counter in bits | array | Any non-empty subset of {0, 8, 16, 24, 32}
 | supportsEmptyIv | Whether or not the IUT supports an empty IV | boolean | true/false
@@ -72,7 +72,7 @@ NOTE: When 'counterLength' contains a value of "0", 'fixedDataOrder' must contai
 [#valid-mac]
 ==== Supported SP 800-108 KDF MACs
 
-The following MAC functions *MAY* be advertised by an ACVP compliant client
+The following MAC or PRF functions *MAY* be advertised by an ACVP compliant client
 
 * CMAC-AES128
 * CMAC-AES192
