--- a/src/kdf/sections/06-test-vectors.adoc
+++ b/src/kdf/sections/06-test-vectors.adoc
@@ -10,12 +10,12 @@ The testGroups element at the top level in the test vector JSON object is an arr
 
 | tgId | Test group identifier | integer
 | kdfMode | The kdfMode used for the test group | string
-| macMode | Psuedorandom function HMAC or CMAC used | string
+| macMode | Psuedorandom function (PRF) HMAC or CMAC used | string
 | counterLocation | "none", "after fixed data", "before fixed data", "middle fixed data", or "before iterator"| string
-| keyOutLength | Expected length of the derived key in bits | integer
+| keyOutLength | Expected length of the derived keying material or key in bits | integer
 | counterLength | Expected length of the counter in bits | integer
 | zeroLengthIv | Whether or not the group utilizes a null IV | boolean
-| testType | Describes the operation being performed | string | No
+| testType | Describes the operation being performed | string 
 | tests | Array of individual test cases | array
 |===
 
@@ -79,3 +79,4 @@ The following is a example JSON object for SP 800-108 KDF test vectors sent from
             
                     
 ....
+
