--- a/src/kdf/sections/07-responses.adoc
+++ b/src/kdf/sections/07-responses.adoc
@@ -54,9 +54,11 @@ The following table describes the JSON properties that represent a test case res
 
 | tcId | The test case identifier | integer
 | breakLocation | The bit location in the fixed data where the counter is placed | integer
-| fixedData | The fixed data used | hex
-| keyOut | The outputted key | hex
+| fixedData | The fixed input data used by the IUT | hex
+| keyOut | The outputted keying material or key | hex
 |===
+
+NOTE: the fixedData or fixed input data string that is used by the IUT is needed by the ACVP server to verify that the IUT correctly derived the keying material. The server does not validate the correct construction of the fixed input data string.  For guidance on constructing a valid fixed input data string, please consult <<SP800-108>> Sections 5, 7.5 and 7.6.
 
 === Example Test Vector Response JSON
 
@@ -83,3 +85,5 @@ The following is an abbreviated example of a JSON object for SP800-108 KDF test 
             
                     
 ....
+
+NOTE: Please note that the values used in the example JSON object are not real values. In particular, the value for the fixedData property is not an example of a validly formed fixed input data string. 
