--- a/src/kas/sp800-56br2/sections/06-test-vectors.adoc
+++ b/src/kas/sp800-56br2/sections/06-test-vectors.adoc
@@ -57,7 +57,7 @@ Describes the KTS configuration for use under the test group.
 
 | associatedDataPattern| The pattern used for constructing the associated data. | value - see <<fixedinfopatcon>>. | Yes
 | encoding| The encoding type used when constructing the data. | value - see <<fixedinfopatcon>>. | Yes
-| hashAlg| The hash algorithm used for the OAEP function. | value - see <<ktsmethods>>. | No
+| hashAlg| The hash algorithm used for the OAEP function. | value - see <<ktsmethod>>. | No
 |===
 
 
