Update Symmetric Spec for ACVP-1164 Fix
-corrected the list of valid AES-CCM tagLens
#1164

--- a/src/symmetric/sections/05-capabilities.adoc
+++ b/src/symmetric/sections/05-capabilities.adoc
@@ -41,7 +41,7 @@ Each algorithm capability advertised is a self-contained JSON object and *SHALL*
 | ivGenMode| IV generation mode for AES-GCM/AES-XPN algorithms| string
 | saltGen| Salt generation method for AES-XPN mode only| string
 | aadLen| The supported AAD lengths in bits for AEAD algorithms| domain
-| tagLen| The supported Tag lengths in bits for AEAD algorithms, see <<property_grid_auth>>| domain
+| tagLen| The supported Tag lengths in bits for AEAD algorithms, see <<property_grid_auth>>| array of integers
 | kwCipher| The cipher as defined in SP800-38F for key wrap mode| array of strings
 | tweakMode| The format of tweak value input for AES-XTS. Hex refers to the tweakValue being a literal hex string. Number refers to the tweakValue being an integer number represented as a hex string.| array of strings
 | keyingOption| The Keying Option used in TDES.  Keying option 1 (1) is 3 distinct keys (K1, K2, K3).  Keying Option 2 (2) is 2 distinct keys only suitable for decrypt (K1, K2, K1). | array of integers
@@ -92,7 +92,7 @@ NOTE: keyingOption 2 *SHALL* only be available for decrypt operations.
 
 The following grid outlines which properties are *REQUIRED*, as well as the possible values a server *MAY* support for each key-wrap block cipher algorithm:
 
-[[property_grid_auth]]
+[[property_grid_kw]]
 .Key-Wrap Block Cipher Algorithm Capabilities Applicability Grid
 
 |===
@@ -106,16 +106,16 @@ The following grid outlines which properties are *REQUIRED*, as well as the poss
 The following grid outlines which properties are *REQUIRED*, as well as the possible values a server *MAY* support for each authenticated block cipher algorithm:
 
 [cols="<,<,<,<,<,<,<,<,<,<,<"]
-[[property_grid_kw]]
+[[property_grid_auth]]
 .Authenticated Block Cipher Algorithm Capabilities Applicability Grid
 
 |===
 | algorithm| revision| direction| keyLen| payloadLen| ivLen| ivGen| ivGenMode| saltGen| aadLen| tagLen
 
-| AES-GCM| "1.0"| ["encrypt", "decrypt"]| [128, 192, 256]| {"Min": 0, "Max": 65536, "Inc": any}| {"Min": 8, "Max": 1024, "Inc": any}| ["internal", "external"]| ["8.2.1", "8.2.2"]| | {"Min": 0, "Max": 65536, "Inc": any}| {[32, 64, 96, 104, 112, 120, 128]}
+| AES-GCM| "1.0"| ["encrypt", "decrypt"]| [128, 192, 256]| {"Min": 0, "Max": 65536, "Inc": any}| {"Min": 8, "Max": 1024, "Inc": any}| ["internal", "external"]| ["8.2.1", "8.2.2"]| | {"Min": 0, "Max": 65536, "Inc": any}| [32, 64, 96, 104, 112, 120, 128]
 | AES-GCM-SIV| "1.0"| ["encrypt", "decrypt"]| [128, 256]| {"Min": 0, "Max": 65536, "Inc": 8}| | | | | {"Min": 0, "Max": 65536, "Inc": 8}|
-| AES-XPN| "1.0"| ["encrypt", "decrypt"]| [128, 192, 256]| {"Min": 0, "Max": 65536, "Inc": any}| | ["internal", "external"]| ["8.2.1", "8.2.2"]| ["internal", "external"]| {"Min": 1, "Max": 65536, "Inc": any}| {[32, 64, 96, 104, 112, 120, 128]}
-| AES-CCM| "1.0"| ["encrypt", "decrypt"]| [128, 192, 256]| {"Min": 0, "Max": 256, "Inc": 8}| {"Min": 56, "Max": 104, "Inc": 8}| | | | {"Min": 0, "Max": 524288, "Inc": any}| {[32, 64, 96, 104, 112, 120, 128]}
+| AES-XPN| "1.0"| ["encrypt", "decrypt"]| [128, 192, 256]| {"Min": 0, "Max": 65536, "Inc": any}| | ["internal", "external"]| ["8.2.1", "8.2.2"]| ["internal", "external"]| {"Min": 1, "Max": 65536, "Inc": any}| [32, 64, 96, 104, 112, 120, 128]
+| AES-CCM| "1.0"| ["encrypt", "decrypt"]| [128, 192, 256]| {"Min": 0, "Max": 256, "Inc": 8}| {"Min": 56, "Max": 104, "Inc": 8}| | | | {"Min": 0, "Max": 524288, "Inc": any}| [32, 48, 64, 80, 96, 112, 128]
 |===
 
 The following grid outlines which properties are *REQUIRED*, as well as the possible values a server *MAY* support for the XTS block cipher algorithm:
