Adds detail to AES MCT descriptions

--- a/src/symmetric/sections/04-testtypes.adoc
+++ b/src/symmetric/sections/04-testtypes.adoc
@@ -222,7 +222,7 @@ For i = 0 to 99
 
 Most AES MCTs use a shared key shuffle routine. The algorithm is shown in <<xml_figureAESKEY>>.
 
-The initial condition for the routine is a tuple (KEY, CT) set to some values. This pseudocode is specifically for encryption. For decryption, swap all instances of CT with PT.
+The initial condition for the routine is a tuple (KEY, CT) set to some values. This pseudocode is specifically for encryption. For decryption, swap all instances of CT with PT. The || symbol is used to denote concatenation. The MSB (most significant bits) and LSB (least significant bits) functions accept a bit string and an integer amount of bits to capture. For example MSB(A, 8) would capture the 8 most significant bits of the bit string A. 
 
 [[xml_figureAESKEY]]
 .AES Encrypt Key Shuffle Routine
@@ -231,7 +231,7 @@ The initial condition for the routine is a tuple (KEY, CT) set to some values. T
 If ( keylen = 128 )
     Key[i+1] = Key[i] xor MSB(CT[j], 128)
 If ( keylen = 192 )
-    Key[i+1] = Key[i] xor (last 64-bits of CT[j-1] || MSB(CT[j], 128))
+    Key[i+1] = Key[i] xor (LSB(CT[j-1], 64) || MSB(CT[j], 128))
 If ( keylen = 256 )
     Key[i+1] = Key[i] xor (MSB(CT[j-1], 128) || MSB(CT[j], 128))
 ----
