update RSA keyGen for ACVP-1181
Correct RSA keyGen xP*, xQ* parameter descriptions in table 16 to reference the values from FIPS 186-4. Closes #1181

--- a/src/rsa/sections/06-keygen-test-vectors.adoc
+++ b/src/rsa/sections/06-keygen-test-vectors.adoc
@@ -39,11 +39,11 @@ The difference between revision "FIPS186-4" and "FIPS186-5" within the prompts l
 | e | the public exponent | hex
 | seed | the seed used in prime generation | hex
 | bitlens | the length of p1, p2, q1, and q2 for prime generation | array of integers
-| xP1 | the prime factor p1 for probable auxiliary primes | hex
-| xP2 | the prime factor p2 for probable auxiliary primes | hex
+| xP1 | xP1 from <<FIPS186-4>> B.3.6, step 4 | hex
+| xP2 | xP2 from <<FIPS186-4>> B.3.6, step 4 | hex
 | xP | the random number used in auxiliary prime generation for p | hex
-| xQ1 | the prime factor q1 for probable auxiliary primes | hex
-| xQ2 | the prime factor q2 for probable auxiliary primes | hex
+| xQ1 | xQ1 from <<FIPS186-4>> B.3.6, step 5 | hex
+| xQ2 | xQ2 from <<FIPS186-4>> B.3.6, step 5 | hex
 | xQ | the random number used in auxiliary prime generation for q | hex
 | pRand | the random P for testing probable primes according to <<FIPS186-4>> or <<FIPS186-5>> | hex
 | qRand | the random Q for testing probable primes according to <<FIPS186-4>> or <<FIPS186-5>> | hex
