Adds SHA-1 / HMAC-SHA-1 as valid algorithm for use in KTS and KAS * https://github.com/usnistgov/ACVP/issues/1170

--- a/src/kas/sp800-56ar2/ecc/sections/05-capabilities.adoc
+++ b/src/kas/sp800-56ar2/ecc/sections/05-capabilities.adoc
@@ -169,10 +169,10 @@ Each parameter set advertised is a self-contained JSON object using the followin
 [[parameter_set_details]]
 ==== KAS ECC Parameter Set Details
 
-* eb: Len n - 224-255, min Len h - 112, min hash len - 224, min keySize - 112, min macSize - 64
-* ec: Len n - 256-283, min Len h - 128, min hash len - 256, min keySize - 128, min macSize - 64
-* ed: Len n - 384-511, min Len h - 192, min hash len - 384, min keySize - 192, min macSize - 64
-* ee: Len n - 512+, min Len h - 256, min hash len - 512, min keySize - 256, min macSize - 64
+* eb: Len n - 224-255, min Len h - 112, min hash len - 112, min keySize - 112, min macSize - 64
+* ec: Len n - 256-283, min Len h - 128, min hash len - 128, min keySize - 128, min macSize - 64
+* ed: Len n - 384-511, min Len h - 192, min hash len - 192, min keySize - 192, min macSize - 64
+* ee: Len n - 512+, min Len h - 256, min hash len - 256, min keySize - 256, min macSize - 64
 
 "noKdfNoKc" *REQUIRES* "hashAlg"
 
@@ -214,6 +214,7 @@ The following ECC Curves *MAY* be advertised by the ACVP compliant crypto module
 
 The following SHA methods *MAY* be advertised by the ACVP compliant crypto module:
 
+* SHA-1
 * SHA2-224
 * SHA2-256
 * SHA2-384
@@ -226,6 +227,7 @@ The following MAC options *MAY* be advertised for registration under a "kdfNoKc"
 
 * AES-CCM
 * CMAC
+* HMAC-SHA-1
 * HMAC-SHA2-224
 * HMAC-SHA2-256
 * HMAC-SHA2-384
