--- a/src/kas/sp800-56ar2/ffc/sections/05-capabilities.adoc
+++ b/src/kas/sp800-56ar2/ffc/sections/05-capabilities.adoc
@@ -167,9 +167,9 @@ Each parameter set advertised is a self-contained JSON object using the followin
 
 fb/fc changes minimum allowed values on options.
 
-* fb: Len p - 2048, Len q - 224, min hash len - 224, min keySize - 112, min macSize - 64
+* fb: Len p - 2048, Len q - 224, min hash len - 112, min keySize - 112, min macSize - 64
 
-* fc: Len p - 2048, Len q - 256, min hash len - 256, min keySize - 128, min macSize - 64
+* fc: Len p - 2048, Len q - 256, min hash len - 112, min keySize - 128, min macSize - 64
 
 "noKdfNoKc" *REQUIRES* "hashAlg"
 
@@ -192,6 +192,7 @@ fb/fc changes minimum allowed values on options.
 
 The following SHA methods *MAY* be advertised by the ACVP compliant crypto module:
 
+* SHA-1
 * SHA2-224
 * SHA2-256
 * SHA2-384
@@ -204,6 +205,7 @@ The following MAC options *MAY* be advertised for registration under a "kdfNoKc"
 
 * AES-CCM
 * CMAC
+* HMAC-SHA-1
 * HMAC-SHA2-224
 * HMAC-SHA2-256
 * HMAC-SHA2-384
