--- a/src/kas/sp800-56br2/ssc/sections/05-capabilities.adoc
+++ b/src/kas/sp800-56br2/ssc/sections/05-capabilities.adoc
@@ -83,6 +83,7 @@ An optional hash function that should be applied to `z` from both the ACVP serve
 
 The following hash functions *MAY* be advertised by an ACVP compliant server:
 
+* SHA-1
 * SHA2-224
 * SHA2-256
 * SHA2-384
