--- a/src/kas/sp800-56c/hkdf/sections/05-capabilities.adoc
+++ b/src/kas/sp800-56c/hkdf/sections/05-capabilities.adoc
@@ -85,6 +85,7 @@ Evaluated as:
 
 The following hash functions MAY be advertised by an ACVP compliant client under the 'hmacAlg' property
 
+* SHA-1
 * SHA2-224
 * SHA2-256
 * SHA2-384
