Update ECDSA capabilities
-Update ECDSA capabilities to include a description of the 'componentTest' capability
-Setting the componentTest capability to true indicates that the hashing is outside of the testing scope 

closes #1194

--- a/src/ecdsa/sections/05-capabilities.adoc
+++ b/src/ecdsa/sections/05-capabilities.adoc
@@ -29,7 +29,7 @@ Each ECDSA algorithm capability advertised is a self-contained JSON object using
 | prereqVals | Prerequisite algorithm validations | array of prereqAlgVal objects | See <<prereq_algs>>
 | capabilities | The individual ECDSA Mode and Revision capabilities | array of capability objects | See <<ecdsa_keyGen_capabilities>>, <<ecdsa_keyVer_capabilities>>, <<ecdsa_sigGen_capabilities>>, <<ecdsa_sigVer_capabilities>>, <<ecdsa_detsigGen_capabilities>>
 | conformances | Used to denote the conformances that can apply to specific modes of ECDSA | array of strings | See <<supported_conformances>>
-| componentTest | If the hash is performed out side of the boundary of the algorithm, setting this to true will cause the messages to be pre-hashed when provided by the server | boolean
+| componentTest | If the hash is performed outside of the boundary of the algorithm, setting this to true will cause the messages to be pre-hashed when provided by the server | boolean | true or false
 |===
 
 NOTE: The 'componentTest' property is only valid for detECDSA / sigGen / FIPS186-5, ECDSA / sigGen / * and ECDSA / sigVer / * registrations.
